projects/vb6parse/snapshots/parsers/cst/option_statements/option_private_with_comment.snap
---
source: projects/vb6parse/src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: ModuleKeyword
          text: Module
        - kind: Whitespace
          text: " "
        - kind: EndOfLineComment
          text: "' Make this module private"
        - kind: Newline
          text: "\n"
